<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ic_gradient_bakcground_color"
    tools:context=".IntroActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="#FFFFFF"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_champions_preview"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/primary_text_color"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_startEnd"
                android:layout_marginEnd="@dimen/margin_startEnd"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="@color/primary_text_color"
                android:textSize="16sp"/>
            
            <Button
                android:id="@+id/btn_sign_in_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_startEnd"
                android:layout_marginEnd="@dimen/margin_startEnd"
                android:layout_marginTop="35dp"
                android:background="@drawable/ic_gradient_background_color_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/padding_TopBottom"
                android:paddingBottom="@dimen/padding_TopBottom"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/btn_sign_up_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_startEnd"
                android:layout_marginEnd="@dimen/margin_startEnd"
                android:layout_marginTop="15dp"
                android:background="@drawable/white_border_shape_button_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/padding_TopBottom"
                android:paddingBottom="@dimen/padding_TopBottom"
                android:text="@string/sign_in"
                android:textColor="#2146C7"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>